RESOLVED FIXED88488
[BlackBerry] browser video player fullscreen mode (portrait) - out of screen/focus - cannot navigate or use the buttons on the screen
https://bugs.webkit.org/show_bug.cgi?id=88488
Summary [BlackBerry] browser video player fullscreen mode (portrait) - out of screen/...
Antonio Gomes
Reported 2012-06-06 20:39:17 PDT
There is still some missing work. Cloning the original bug ... +++ This bug was initially created as a clone of Bug #88019 +++ BUG REPORT FROM PRZILLA: If you use the browser video player (tested through Youtube), if you full screen the video, the window frame is totally out of focus. Half of the video screen cannot be seen and the buttons (restore button, scroll bar) cannot be used either. The only way to restore the video screen is by letting the video finish or by closing the application. Steps to Reproduce: * Open up the browser. * Click on the Youtube bookmark (the browser comes with these bookmarks). * Choose a video to drill down to the video play back page. * Enter the play button on top of the video player/thumbnail to start playback. * After the playback starts, click on the "full screen" button (on the bottom right of the video player window,) to maximize the video player screen size (this button is the square-ish button) Expected Results: * After the "full screen" button is pressed, the user should be able to see the full screen of the video player (even if it is scaled down, or up, in any of the dimensions). * The user should be able to access the "restore window" button somehow and be able to use the "progress bar" somehow. Actual Results: * about 40 to 50% of the video screen is obscured from the user (that is, it is not centred and aligned correctly) * The "restore window" button is accessible. * the progress bar is not accessible. * the only way the screen restores back is when the entire video playback is finished.
Attachments
(committed r119680, r=gstaikos) patch (3.56 KB, patch)
2012-06-06 20:45 PDT, Antonio Gomes
no flags
Antonio Gomes
Comment 1 2012-06-06 20:45:41 PDT
Created attachment 146184 [details] (committed r119680, r=gstaikos) patch
Note You need to log in before you can comment on or make changes to this bug.